# eu-policy-feedback-impact-analysis

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TECHNICAL.md  cluster_feedback.ipynb  clustering_descriptive_stats.ipynb  feedback-viewer.html  pipeline.conf.example  pipeline.sh  pyproject.toml  viewer.html  visualize_classifications.ipynb
config/: init-no-response-blacklist-19.txt  initiative-whitelist-145.txt
docs/: README.md  architecture.md  data-dictionary.md  deployment-guide.md  pipeline-reference.md
scripts/: migrate-data.sh
src/: README.md  build_unit_summaries.py  build_webapp_index.py  classify_initiative_and_feedback.py  cluster_all_initiatives.py  find_initiative_by_pub.py  find_missing_extracted_text.py  find_missing_initiatives.py  find_non_english_feedback_attachments.py  find_short_pdf_extractions.py  inference_utils.py  initiative_stats.py  merge_change_summaries.py  merge_cluster_feedback_summaries.py  merge_cluster_rewrites.py  merge_ocr_results.py  merge_summaries.py  merge_translations.py  ocr_short_pdfs.py  print_chunk.py  repair_broken_attachments.py  rewrite_cluster_summaries.py  scrape_eu_initiative_details.py  scrape_eu_initiatives.py  summarize_changes.py  summarize_clusters.py  summarize_documents.py  text_utils.py  translate_attachments.py
viewers/: README.md  viewer.html
webapp/: AUTH.md  README.md  package-lock.json  package.json
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: charts.tsx  cluster-node.tsx  cluster-stats-bar.tsx  cluster-view.tsx  document-card.tsx  expandable-text.tsx  feedback-card.tsx  (+7 more)
(+7 files in other folders)
